<resources>
    <string name="app_name">#EVDEKAL</string>

    <string name="sign_in">Giriş Yap</string>
    <string name="sign_up">Kaydol</string>
    <string name="username">Username:</string>
    <string name="username_hint">Username Giriniz</string>
    <string name="password_hint">Şifre Giriniz</string>
    <string name="password">Şifre:</string>
    <string name="target_mail">Kime:</string>
    <string name="title">Başlık:</string>
    <string name="context">İçerik:</string>
    <string name="attachment">Ek Dosya:</string>
    <string name="send">Gönder</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_note">Note</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="track">Track Activity</string>
    <string name="percentage">%1$d%%</string>
    <string name="bicycle">On a bicycle</string>
    <string name="foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown_activity">Unknown activity</string>
    <string name="vehicle">In a vehicle</string>
    <string name="walking">Walking</string>


</resources>
