<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="75dp">
    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_marginTop="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical">
            <pl.droidsonroids.gif.GifImageView
                android:src="@drawable/welcome"
                android:layout_width="1024px"
                android:layout_height="1024px"
                android:background="@drawable/menu_icon"
                />

        </LinearLayout>

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_marginLeft="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:textSize="20dp"
                android:text="@string/username">
            </TextView>

            <EditText

                android:text="yusuf"
                android:textCursorDrawable="@null"
                android:layout_marginStart="2dp"
                android:textColorHint="#2196F3"
                android:gravity="left"
                android:id="@+id/username"
                android:layout_marginLeft="1dp"
                android:hint="@string/username_hint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></EditText>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_marginLeft="2dp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:textSize="20dp"
                android:text="@string/password">
            </TextView>
            <EditText
                android:text="1"
                android:layout_marginStart="2dp"
                android:textColorHint="#2196F3"
                android:gravity="left"
                android:id="@+id/password"
                android:layout_marginLeft="1dp"
                android:hint="@string/password_hint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textCursorDrawable="@null"
                ></EditText>
        </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            >
            <Button
                android:id="@+id/sign_up"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_up" />
            <Button
                android:id="@+id/sign_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in" />

        </LinearLayout>
    </LinearLayout>


    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    </ScrollView>


</LinearLayout>