<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Mail">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:text="@string/target_mail"
                android:gravity="center_vertical"

                android:textSize="20dp"></TextView>

            <EditText
                android:layout_marginStart="20dp"
                android:hint="Lütfen Mail Adresi Giriniz.."
                android:textColorHint="#F57C00"
                android:id="@+id/target_mail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:outlineSpotShadowColor="#333333"
                ></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:text="@string/title"
                android:gravity="center_vertical"

                android:textSize="20dp"></TextView>

            <EditText
                android:id="@+id/title"
                android:textColorHint="#F57C00"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:hint="Başlık Giriniz"
                android:outlineSpotShadowColor="#333333"
                ></EditText>
        </LinearLayout>

        <LinearLayout

            android:layout_weight="15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:text="@string/context"
                android:layout_marginTop="10dp"
                android:gravity="left"

                android:textSize="20dp"></TextView>

            <EditText
                android:id="@+id/context"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="left"
                android:hint="Mail İçeriği"
                android:outlineSpotShadowColor="#333333"
                android:textColorHint="#F57C00"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="0dp"
                android:text="@string/attachment"
                android:gravity="center_vertical"

                android:textSize="20dp"></TextView>

            <Button
                android:id="@+id/attachment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EKLE"

                >

            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:gravity="bottom|right"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send"
                >
            </Button>


</LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>